tests/ui_unstable/dir_include_wchz.rs
use wchar::{include_wchz, wchar_t};

const DIR: &[wchar_t] = include_wchz!("../data");

fn main() {}
